[package]
name = "initial_conditions"
license = "MIT/Apache-2.0"
version = "1.0.0"
authors = ["Matt <young.qubit@gmail.com>"]
description = "A helpful physics lib: mechanics, useful constants, and more."

repository = "https://github.com/someguynamedmatt/initial_conditions"
documentation = "https://someguynamedmatt.github.io/initial_conditions/initial_conditions/"
keywords = ["physics", "mechanics", "newtonian"]

[dependencies]
num = "0.1.42"
